# VibeReading

./: .env.example  .gitignore  NanoRAG.py  Part1.md  README.md  README_CN.md  Test.py  main.py  pyproject.toml
backend/: app.py  config.py
backend/api/: schemas.py
backend/api/routes/: chat.py  files.py  projects.py
backend/core/: agent.py  mineru.py  rag_tools.py  state.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  chat.js  viewer.js
