[project]
name = "vibereading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.11",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "python-multipart>=0.0.22",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
]
