[project]
name = "vibereading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nano-graphrag>=0.0.8",
    "deepagents>=0.4.11",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.3",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "openai>=2.8.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
]
